--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,10 +3,11 @@ buildscript {
         jcenter()
         mavenLocal()
         mavenCentral()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.facebook.testing.screenshot:plugin:0.4.3'
     }
 }
@@ -15,13 +16,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.facebook.testing.screenshot'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.3'
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "sundeepk.github.com.sample"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "sundeepk.github.com.sample.TestRunner"
@@ -36,15 +36,15 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:support-v4:27.1.1'
     compile project(':library')
-    androidTestCompile 'com.android.support.test:runner:0.4'
-    androidTestCompile 'com.azimolabs.conditionwatcher:conditionwatcher:0.1'
-    androidTestCompile 'com.android.support.test:rules:0.4'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestCompile 'com.android.support.test:runner:1.0.2'
+    androidTestCompile 'com.azimolabs.conditionwatcher:conditionwatcher:0.2'
+    androidTestCompile 'com.android.support.test:rules:1.0.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.0'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.0'
-    androidTestCompile 'org.mockito:mockito-core:1.10.17'
-    androidTestCompile 'com.android.support:support-annotations:24.2.1'
+    androidTestCompile 'org.mockito:mockito-core:2.8.9'
+    androidTestCompile 'com.android.support:support-annotations:27.1.1'
 }
