--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.facebook.testing.screenshot'
 
 android {
@@ -47,4 +48,8 @@ dependencies {
     androidTestCompile 'com.google.dexmaker:dexmaker:1.0'
     androidTestCompile 'org.mockito:mockito-core:2.8.9'
     androidTestCompile 'com.android.support:support-annotations:27.1.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
