--- a/gradle.properties
+++ b/gradle.properties
@@ -18,13 +18,13 @@ POM_LICENCE_URL=http\://opensource.org/licenses/MIT
 VERSION_NAME=2.0.2.3
 VERSION_CODE=2.0.2.3
 POM_DEVELOPER_ID=sundeepk
-POM_SCM_DEV_CONNECTION=scm\:git@github.com\:SundeepK/CompactCalendarView.git
-POM_SCM_URL=https\://github.com/SundeepK/CompactCalendarView
-GROUP=com.github.sundeepk
+POM_SCM_DEV_CONNECTION=scm\:git@github.com\:genaku/CompactCalendarView.git
+POM_SCM_URL=https\://github.com/genaku/CompactCalendarView
+GROUP=com.github.genaku
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_NAME=Sundeep Kahlon
 systemProp.http.nonProxyHosts=localhost,127.0.01
-POM_URL=https\://github.com/SundeepK/CompactCalendarView
-POM_SCM_CONNECTION=scm\:git@github.com\:SundeepK/CompactCalendarView.git
+POM_URL=https\://github.com/genaku/CompactCalendarView
+POM_SCM_CONNECTION=scm\:git@github.com\:genaku/CompactCalendarView.git
 POM_LICENCE_NAME=The MIT License (MIT)
 POM_DESCRIPTION=An android library which provides a compact calender view
