--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     androidTestImplementation 'com.google.dexmaker:dexmaker:1.0'
     androidTestImplementation 'org.mockito:mockito-core:2.8.9'
     androidTestImplementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 }
 
 repositories {
